form issue on mobile fixed

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -160,7 +160,7 @@ height: 1em;
 }
 
 form{
-    width: 50%
+    width: 70%
 }
 
 #wrapper{
